fix: Too much width on hover

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -105,8 +105,9 @@ tooltip {
 #workspaces button:hover {
   background: @main-fg;
   color: @wb-hvr-fg;
-  padding-left: 8px;
-  padding-right: 8px;
+  padding-left: 15px;
+  padding-right: 15px;
+  min-width: 0;
   animation: gradient_f 20s ease-in infinite;
   transition: all 0.3s cubic-bezier(0.55, -0.68, 0.48, 1.682);
 }
